Overflow-x hidden on body to stop horizontal scroll

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,6 +34,7 @@ $background-lightgrey: #f4f4f4;
 html,
 body {
     //height: 100%; //overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 .veggie-burger {
